# code-context-mcp

./: .chunking.example.yaml  .gitignore  Makefile  README.md  pyproject.toml  run_branch_tasks.sh
chunking/: __init__.py  config.py  get_chunks.py  ingest_delta.py  mcp_server.py
docker/: .env.example  docker-compose.yml
